# QimoLibrary

./: README.md  VERSION_MANAGEMENT.md  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
.github/workflows/: ci.yml
public/Fonts/: FONT_LICENSES.txt
scripts/: bump-version.js
src/: App.css  i18n.ts  main.tsx  router.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  repository.rs
src-tauri/src/models/: library.rs  mod.rs  notebook.rs
src-tauri/src/services/: epub_parser.rs  library_service.rs  mod.rs  notebook_service.rs
src-tauri/src/utils/: path_utils.rs
src/components/: Layout.tsx  SearchBar.tsx  Sidebar.tsx  WelcomeModal.tsx
src/components/decorative/: ArchFrame.tsx  SignatureButton.tsx  VintageDivider.tsx
src/components/reader/: EpubReader.tsx  NotebookSidebar.tsx
src/context/: BookContext.tsx  SettingsContext.tsx
src/hooks/: useDatabase.tsx  useLibrary.ts  useNotebook.ts  useReaderStyles.ts  useTranslation.ts
src/pages/: HomePage.tsx  LibraryPage.tsx  NotebookEditorPage.tsx  NotebooksPage.tsx  ReaderPage.tsx  SettingsPage.tsx  StandaloneReader.tsx
src/services/: cache.ts  database.ts
