[package]
name = "qimo-library"
version = "0.0.2"  # 版本号与 package.json 保持一致
description = "EPUB Library Manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "epub_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }

# 优化配置 - 减小构建体积
[profile.dev]
opt-level = 0          # 开发模式不优化,加快编译速度
debug = true           # 保留调试信息
strip = "none"         # 不剥离符号

[profile.release]
opt-level = "z"        # 优化体积而非速度
debug = false          # release模式不包含调试信息
strip = true           # 剥离调试符号
lto = true             # 链接时优化,减小体积
panic = "abort"        # panic时直接终止,减小体积
codegen-units = 1      # 单个代码生成单元,更好优化

